force-app/main/default/objects/AzureAD_Credential__c/AzureAD_Credential__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AzureAD Credential</label>
</CustomObject>