force-app/main/default/objects/AzureAD_Credential__c/fields/AdminUser__c.field-meta.xml
<CustomField>
    <fullName>AdminUser__c</fullName>
    <label>AdminUser</label>
    <length>75</length>
    <type>Text</type>
</CustomField>