force-app/main/default/objects/AzureAD_Credential__c/fields/ClientSecretKey__c.field-meta.xml
<CustomField>
    <fullName>ClientSecretKey__c</fullName>
    <label>ClientSecretKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>