force-app/main/default/objects/AzureAD_Credential__c/fields/ComplianceID__c.field-meta.xml
<CustomField>
    <fullName>ComplianceID__c</fullName>
    <label>ComplianceID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>