force-app/main/default/objects/AzureAD_Credential__c/fields/DevAPIEndPoint__c.field-meta.xml
<CustomField>
    <fullName>DevAPIEndPoint__c</fullName>
    <defaultValue>&apos;https://devviewledgerapi.azurewebsites.net/api/&apos;</defaultValue>
    <label>DevAPIEndPoint</label>
    <type>Url</type>
</CustomField>