force-app/main/default/objects/AzureAD_Credential__c/fields/MicrosoftGraphURL__c.field-meta.xml
<CustomField>
    <fullName>MicrosoftGraphURL__c</fullName>
    <label>MicrosoftGraphURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>