force-app/main/default/objects/AzureAD_Credential__c/fields/MSTeamsprefix__c.field-meta.xml
<CustomField>
    <fullName>MSTeamsprefix__c</fullName>
    <label>MSTeamsprefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>