force-app/main/default/objects/AzureAD_Credential__c/fields/Salesforce_ClientId__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ClientId__c</fullName>
    <label>Salesforce ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>