force-app/main/default/objects/AzureAD_Credential__c/fields/Salesforce_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ClientSecret__c</fullName>
    <label>Salesforce ClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>