force-app/main/default/objects/AzureAD_Credential__c/fields/SiteMemberGroupId__c.field-meta.xml
<CustomField>
    <fullName>SiteMemberGroupId__c</fullName>
    <label>SiteMemberGroupId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>