force-app/main/default/objects/AzureAD_Credential__c/fields/SPServiceAccount__c.field-meta.xml
<CustomField>
    <fullName>SPServiceAccount__c</fullName>
    <label>SPServiceAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>