force-app/main/default/objects/AzureAD_Credential__c/fields/SPSiteURL__c.field-meta.xml
<CustomField>
    <fullName>SPSiteURL__c</fullName>
    <label>SPSiteURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>