force-app/main/default/objects/AzureAD_Credential__c/fields/VTIID__c.field-meta.xml
<CustomField>
    <fullName>VTIID__c</fullName>
    <label>VTIID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>